@@ -2,17 +2,20 @@ package roomescape.reservation;
 
 import org.springframework.stereotype.Service;
 import roomescape.JwtUtil;
+import roomescape.waiting.WaitingRepository;
+import roomescape.waiting.WaitingWithRank;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class ReservationService {
     private final ReservationDao reservationDao;
-    private final JwtUtil jwtUtil;
+    private final WaitingRepository waitingRepository;
 
-    public ReservationService(ReservationDao reservationDao, JwtUtil jwtUtil) {
+    public ReservationService(ReservationDao reservationDao, WaitingRepository waitingRepository) {
         this.reservationDao = reservationDao;
-        this.jwtUtil = jwtUtil;
+        this.waitingRepository = waitingRepository;
     }
 
     public ReservationResponse save(ReservationRequest reservationRequest) {
@@ -27,12 +30,12 @@ public class ReservationService {
     public List<ReservationResponse> findAll() {
         return reservationDao.findAll().stream()
                 .map(it -> new ReservationResponse(it.getId(), it.getName(), it.getTheme().getName(), it.getDate(), it.getTime().getValue()))
-                .toList();
+                .collect(Collectors.toList());
     }
 
     public List<MyReservationResponse> getMyReservations(String token) {
-        Long userId = jwtUtil.getUserIdFromToken(token);
-        return reservationDao.findByMemberId(userId).stream()
+        Long userId = JwtUtil.getUserIdFromToken(token);
+        List<MyReservationResponse> reservations = reservationDao.findByMemberId(userId).stream()
                 .map(reservation -> new MyReservationResponse(
                         reservation.getId(),
                         reservation.getTheme().getName(),
@@ -40,6 +43,20 @@ public class ReservationService {
                         reservation.getTime().getValue(),
                         "예약"
                 ))
-                .toList();
+                .collect(Collectors.toList());
+
+        List<WaitingWithRank> waitings = waitingRepository.findWaitingsWithRankByMemberId(userId);
+        List<MyReservationResponse> waitingResponses = waitings.stream()
+                .map(waitingWithRank -> new MyReservationResponse(
+                        waitingWithRank.getWaiting().getId(),
+                        waitingWithRank.getWaiting().getThemeId().toString(),
+                        waitingWithRank.getWaiting().getDate(),
+                        waitingWithRank.getWaiting().getTimeId().toString(),
+                        waitingWithRank.getRank() + "번째 예약대기"
+                ))
+                .collect(Collectors.toList());
+
+        reservations.addAll(waitingResponses);
+        return reservations;
     }
 }
